force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <!-- Removing explicit compactLayoutAssignment to avoid 'no CompactLayout named System Default' error; Salesforce will assign default automatically -->
    <description>Stores details related to students enrolled in Salesforce training programs.</description>
    <label>Student</label>
    <pluralLabel>Students</pluralLabel>
    <nameField>
        <displayFormat>STU-{0000}</displayFormat>
        <label>Student Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>