force-app/main/default/objects/Student__c/fields/External_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Student_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Student Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>