force-app/main/default/objects/Student__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>