force-app/main/default/objects/Student__c/validationRules/Require_Email_When_Enrolled.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_When_Enrolled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Enrolled&quot;), ISBLANK(Email__c))</errorConditionFormula>
    <errorMessage>Email is required when Status is Enrolled.</errorMessage>
</ValidationRule>