force-app/main/default/objects/Student__c/listViews/Active_Students.listView-meta.xml
<ListView>
    <fullName>Active_Students</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <columns>Enrollment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Active Students</label>
</ListView>